# django-twitter

./: .gitignore  build.sh  pyproject.toml  requirements.txt
twitter/: settings.py  urls.py
twitter_web/: admin.py  apps.py  helper.py  models.py  urls.py  views.py
twitter_web/migrations/: 0001_initial.py  0002_alter_user_country_alter_user_phone.py  0003_alter_user_email_alter_user_username.py  0004_advertiser_affiliatedentity_tweet_tweetimage_retweet_and_more.py  0005_headerimage.py  0006_notification.py  0007_auto_20230106_1115.py  0008_alter_profileimage_user_id.py  0009_auto_20230107_1251.py  0010_auto_20230108_0954.py  0011_auto_20230108_0954.py  0012_alter_user_username.py  0013_alter_user_email.py  0014_bookmark.py  0015_auto_20230109_1241.py  0016_alter_bio_user_id.py  0017_user_bookmarks.py  0018_message_read_status.py  0019_auto_20230110_1031.py  0020_auto_20230110_1801.py  0021_auto_20230110_1802.py
twitter_web/static/twitter_web/css/: conversation.css  edit-profile.css  follow-item.css  login.css  messages.css  modal.css  nav-bar.css  profile.css  register.css  search-bar.css  search.css  settings.css  timeline.css  trend.css  tweet-view.css  tweet.css
twitter_web/static/twitter_web/js/: conversation.js  follow.js  modals.js  profile.js  search.js  tweet.js
twitter_web/templates/twitter_web/: 404.html  bookmarks.html  conversation.html  edit_profile.html  follow-list.html  home.html  login.html  messages.html  notifications.html  profile.html  register.html  search.html  settings.html  timeline.html  tweet_view.html
(+12 files in other folders)
